# codex-less

.codex/: config.toml  history.jsonl
.codex/sessions/2025/12/03/: rollout-2025-12-03T17-17-27-019ae380-9a32-74f1-bb41-08132c50f8c7.jsonl  rollout-2025-12-03T17-22-37-019ae385-56bc-75f0-90ea-7c499d6805e5.jsonl  rollout-2025-12-03T17-22-51-019ae385-8a23-7aa0-ade0-d9a5847a86ae.jsonl  rollout-2025-12-03T17-23-29-019ae386-1fc2-7d13-a3e1-eafca07a098b.jsonl  rollout-2025-12-03T17-26-24-019ae388-ca48-7be2-86b8-f3bb343d7cfd.jsonl  rollout-2025-12-03T17-48-31-019ae39d-0b91-70c0-967e-2077e083e3f2.jsonl  rollout-2025-12-03T17-48-45-019ae39d-4318-7ba0-8a88-d31575b816ca.jsonl  rollout-2025-12-03T17-51-12-019ae39f-8070-7953-b53e-255dabb2a4b0.jsonl  rollout-2025-12-03T17-51-33-019ae39f-d198-7a40-a289-a299afec5464.jsonl  rollout-2025-12-03T17-52-20-019ae3a0-883e-7620-a470-9156d760df4d.jsonl  rollout-2025-12-03T17-52-53-019ae3a1-0be3-7152-a79e-86e23bb0dfc2.jsonl
.github/workflows/: ci.yml
codex-rs/cli/: Cargo.toml
codex-rs/shell-tool-mcp/: Cargo.toml  README.md
codex-rs/shell-tool-mcp/src/: main.rs  server.rs
