[package]
name = "codex-shell-tool-mcp"
version = "0.0.0"
edition = "2024"
authors = ["OpenAI"]
description = "Launcher for the shell MCP server with bundled bash variants"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
libc = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "time"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
